<resources>
    <string name="app_name">Brew Pad</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Brew Details Tab -->
    <string name="brew_name">Brew Name</string>
    <string name="brew_name_hint">Enter Brew Name</string>
    <string name="brew_style">Brew Style</string>
    <string-array name="brew_style_list">
        <item>Select Style</item>
        <item>IPA</item>
        <item>Pilsner</item>
        <item>Porter</item>
        <item>Stout</item>
        <item>Barleywine</item>
    </string-array>
    <string name="brew_method">Brew Metod</string>
    <string-array name="brew_method_list">
        <item>Select Method</item>
        <item>Extract Brewing</item>
        <item>Extract w/ Specialty Grains</item>
        <item>All Grain</item>
    </string-array>
    <string name="batch_size">Batch Size</string>
    <string name="efficiency">Efficiency</string>
    <string name="pre_boil_size">Pre-Boil Size</string>
    <string name="post_boil_size">Post-Boil Size</string>

    <!-- Units -->
    <string name="units_text">Units</string>
    <string-array name="volume_list">
        <item>gal</item>
        <item>L</item>
    </string-array>
    <string-array name="weight_list">
        <item>lb</item>
        <item>oz</item>
        <item>kg</item>
        <item>g</item>
    </string-array>

    <string name="min_text">Min</string>

    <!-- Add Fermentables Tab -->
    <string name="amount_hint">Amount</string>
    <string-array name="list_of_fermentables">
        <item>2 Row</item>
        <item>Munich</item>
        <item>Chocolate</item>
        <item>Pilsner</item>
    </string-array>
    <string name="bill_percent_text">Bill %</string>

    <!-- Add Hops Tab -->
    <string-array name="hop_variety">
        <item>Cascade</item>
        <item>Columbus</item>
        <item>Centennial</item>
        <item>Simcoe</item>
    </string-array>

    <string name="AA_hint">AA</string>
    <string name="bill_percent">100%</string>
    <string name="time_hint">Time</string>
    <string-array name="hop_type">
        <item>Pellet</item>
        <item>Whole</item>
        <item>Extract</item>
    </string-array>

    <string-array name="hop_use">
        <item>Mash</item>
        <item>First Wort</item>
        <item>Boil</item>
        <item>Dry Hop</item>
    </string-array>

    <string name="ibu_text">IBU</string>

</resources>