<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/delete_hop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_18dp" />

        <EditText
            android:id="@+id/hop_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount_hint"/>

        <Spinner
            android:id="@+id/hop_amount_unit_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <Spinner
            android:id="@+id/hop_variety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <EditText
            android:id="@+id/hop_alpha_acid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/AA_hint"/>

        <TextView
            android:id="@+id/hop_bill_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/hop_time_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/time_hint">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_text">
        </TextView>

        <Spinner
            android:id="@+id/hop_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <Spinner
            android:id="@+id/hop_use_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:id="@+id/ibu_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibu_text">
        </TextView>

    </GridLayout>

</GridLayout>